src/css/components/UserBar.css
@import '../core/typography.css';

/*  */

.UserBar {
  color: #ffffff;
  font-weight: bold;
  font-size: 1.1rem;
  font-family: var(--type__primary);

  &:before {
    content: '';
    display: block;
    width: 100%;
    height: 3px;
    background: var(--color__brand-blue);
    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.15);
  }

  &__list {
    @mixin rounded;
    padding: 0;
    margin: 0;
    margin-left: auto;
    margin-top: -3px;
    position: relative;
    list-style: none;
    justify-content: flex-end;
    display: flex;
    background: var(--color__brand-blue);
    box-shadow: 0 1px 2px 0 rgba(0,0,0,0.15);
  }

  &__container {
    display: flex;
  }

  &__item {
    padding-top: 3px;
    padding-right: 0.75lh;
    padding-left: 0.75lh;
    background-color: var(--color__brand-blue);
    color: #ffffff;
  }

  &__item--empty {
    display: none;
  }

  &__item-admin {
    position: relative;

    &:last-child {
      margin-right: auto;
    }
  }

  &__item--action {
    background-color: var(--color__brand-blue);
    color: #ffffff;
    padding-left: 0;
    padding-right: 0;

    &:hover {
      background-color: var(--color__brand-blue--hover);
    }

    & > a {
      padding: 0 0.75lh;
      color: #ffffff;
      text-decoration: none;
      display: block;
    }
  }

  &__item--welcome {
    margin-left: auto;
  }

  &__item-dropdown {
    display: none;
    background-color: var(--color__brand-blue);
    color: #ffffff;
    position: absolute;
    top: 29px;
    right: -101px;
    min-width: 220px;
    padding: 1rem;
    z-index: var(--layer__user-bar-dropdown);
    @mixin card flat;
  }

  &__item--open &__item-dropdown {
    display: block;
  }
}

.UserBar__item-admin {
  & > span {
    cursor: pointer;
  }

  & h3 {
    display: none;
  }

  & li, & .msl_admin {
    font-size: 0.9rem;
    display: block !important;
    border: none !important;
    background: none !important;
    padding: 0 !important;
    margin-bottom: 0.5rem !important;
  }

  & a {
    text-decoration: none;
    color: #ffffff;

    &:hover {
      text-decoration: underline;
    }
  }
}

.UserBar__admin-menu {


}


.UserBar__admin-control-panel {

}

